# x-satellite

./: .gitignore  CMakeLists.txt  README.md  configure.sh
src/: MainWindow.cpp  MainWindow.h  ReportGenerator.cpp  ReportGenerator.h  SatelliteForm.cpp  SatelliteForm.h  SatelliteReport.cpp  SatelliteReport.h  SearchWidget.cpp  SearchWidget.h  main.cpp
